--- a/core/templates/404.html
+++ b/core/templates/404.html
@@ -8,7 +8,7 @@
     <div >
         <div class="page-container">
             <a class="logo" href="{% get_domain %}/">
-                <img src="{% get_domain %}/static/img/logo_big.png" alt="Logo">
+                <img src="{% get_domain %}/static/img/logo_big.png" alt="Logo" height="128">
             </a>
             <p class="text">{% trans 'Error 404' %}</p>
             <p class="text">{% trans 'Page not found' %}</p>
